# flexible-numeric-parsers

./: CHANGELOG.md  LICENSE  README.md  flexible-numeric-parsers.cabal
app/: Main.hs
src/: FlexibleNumericParsers.hs
src/Numeric/Parse/: Flexible.hs
test/: Generators.hs  Spec.hs
