cabal-version:       2.4
name:                flexible-numeric-parsers
version:             0.0.0.0
synopsis:            Flexible numeric parsers for real-world programming languages.
description:         Flexible numeric parsers for real-world programming languages.
homepage:            https://github.com/patrickt/flexible-numeric-parsers
bug-reports:         https://github.com/patrickt/flexible-numeric-parsers/issues
license:             MIT
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          Patrick Thomson <patrickt@github.com>
copyright:           2020 Patrick Thomson
category:            Parsing
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/patrickt/flexible-numeric-parsers.git

common common-options
  build-depends:       base >= 4.12.0.0 && <5
                     , attoparsec ^>= 0.13.2
                     , scientific ^>= 0.3.6
                     , text

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Numeric.Parse.Flexible

test-suite flexible-numeric-parsers-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Generators
  build-depends:       flexible-numeric-parsers
                     , hedgehog
                     , text
                     , tasty
                     , tasty-hedgehog
                     , tasty-hunit
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
